Modified the HTML text on main page

--- a/Sockets/WebServer/www/root.html
+++ b/Sockets/WebServer/www/root.html
@@ -8,6 +8,10 @@
 			<li>/file/sample.html -- returns the content of the file sample.html</li>
 			<li>/json -- returns a json of the /random request</a></li>
 			<li>/random -- returns index.html</a></li>
+			<li>/multiply -- returns the product of two integers</a></li>
+			<li>/github? -- returns list of repos</a></li>
+			<li>/reverse? -- returns the input string of characters in reverse order</a></li>
+			<li>/count? -- returns the number of characters in a string</a></li>
 		</ul>
 		<h3>File Structure in www (you can use /file/www/FILENAME):</h3>
 		${links}
